--- a/style1.css
+++ b/style1.css
@@ -3,7 +3,8 @@
     justify-content: space-between;
     align-items: center;
     background-color: rgb(209, 207, 219);
-    padding: 10px 20px 
+    padding: 10px 10px;
+    /* margin: 13rem;  */
 }
 
 .navbar .logo {
@@ -13,7 +14,8 @@
     }
 .nav-links {
     list-style: none;
-    display: flex
+    display: flex;
+    padding-left: 2rem;
 }
 .nav-links li {
     margin: 0 15px; 
@@ -137,7 +139,7 @@ button[type="submit"]:hover {
     align-items: center;
     padding: 50px;
     background-color: #f4f4f4;
-    height: 100vh;     
+    /* height: 100vh;      */
   }
   
   .hero-text {
@@ -352,7 +354,7 @@ button[type="submit"]:hover {
 }
 
 .footer-section {
-  padding: 20px;
+  padding: 10px;
   background-color: #ffffff;
   border-top: 1px solid #e0e0e0;
 }
@@ -425,8 +427,8 @@ button[type="submit"]:hover {
   
 
 .card:hover {
-background-color: #333;
-color: #e0e0e0;
+background-color: #ffffff;
+color: #000000;
 }
 
 .carded:hover {
@@ -467,3 +469,13 @@ button {
   padding: 10px 20px;
   font-size: 18px;
 }
+
+/* .team-member {
+  background-color: #4CAF50;
+}
+
+.team {
+  color: green;
+} */
+
+
